--- a/Frontend/app/package.json
+++ b/Frontend/app/package.json
@@ -14,12 +14,17 @@
     "@dnd-kit/sortable": "^9.0.0",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.8",
+    "axios-auth-refresh": "^3.3.6",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "redux-persist": "^6.0.0",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
